# bverl-miniproject

./: README.md  pyproject.toml
notebooks/: 00-submission.ipynb  01-gyl-exploratory-data-analysis.ipynb  02_julian_exploration.ipynb  03_julian_exploration2.ipynb  05_Julian2.ipynb  07_Julian_Clean.ipynb  08_Julian_Stats_Playground.ipynb  submission.ipynb
src/geoguesser/: Statistics.py  classifier.py  dataset.py  trainer.py
